# jsbsim-gym

./: .gitignore  README.md  UNCERTAINTY_TECHNICAL_README.md  compare_mppi_dynamics.py  controller.md  extract_nominal_weights.py  mppi_code_explained.md  mppi_tuning.db  plot_canyon_trajectory_overlay.py  plot_downloaded_dem.py  plot_nominal_targets.py  pyproject.toml  run_canyon_render.py  run_canyon_simple.py  run_mppi.py  run_scenario.py  run_simple_circle.py  simple_controller_tuning.db  test.py  test_pickle.py  test_poly_order.py  test_sac_canyon.py  train.py  train_sac_canyon.py  tune_mppi.py
air-racing-optimization/: README.md  get_task_info.py  main.py  main_iterative.py  task_config.py  threeD_continuous_optimization.py  twoD_continuous_optimization.py
air-racing-optimization/final_results/: dyn.asb  dyn_super_crude.asb  dyn_v2.asb  f16dyn_crude.asb  f18dyn.asb  final_trajectory_path_video.py
air-racing-optimization/terrain_model/: load_raw_data.py  precomputed_interpolated_model.py
drs_gatekeeper/: __init__.py  drs_gatekeeper.py  track_bounds.py
jsbsim_gym/: _mppi_backend.py  calibration.py  canyon.py  canyon_artifacts.py  canyon_env.py  cascaded_pid_controller.py  controllers.py  data_collection_env.py  dataset.py  download_canyon_dem.py  env.py  jsbsim_gym.py  mppi_defaults.py  mppi_jax.py  mppi_run_config.py  mppi_support.py  nominal_trajectory.py  ppo_train.py  replay.py  run_diagnostics.py  simple_controller.py  uncertainty.py
optuna/: mppi_tuning.db  tune_circle_mppi.py  tune_mppi.py  tune_simple_controller.py
output/: f16_dataset_coverage.json
sac/: test_sac.py  test_sac_canyon.py  train_sac.py  train_sac_canyon.py
tests/: debug_rollout.py  plot_gatekeeper_rollouts.py  test_calibration.py  test_controllers.py  test_env.py  test_mppi_run_config.py  test_nominal_trajectory.py  test_uncertainty.py
(+12 files in other folders)
