[project]
name = "jsbsim-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy>=2.1",
    "scipy",
    "matplotlib",
    "jsbsim",
    "moderngl",
    "pygame",
    "gymnasium",
    "shimmy",
    "torch",
    "tensorboard",
    "stable-baselines3>=2.0",
    "imageio",
    "imageio-ffmpeg",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.7.2",
    "joblib>=1.5.3",
    "pyyaml>=6.0.3",
    "aerosandbox>=4.2.9",
    "pyvista>=0.47.3",
    "scikit-image>=0.26.0",
    "rasterio>=1.5.0",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]>=0.5.3",
]
mac = [
    "jax-mps",
]

[dependency-groups]
dev = [
    "optuna>=4.8.0",
    "pytest>=9.0.3",
]

